live-initrd-sidux (0.0.54) UNRELEASED; urgency=low

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET

  [ Niall Walsh ]
  * Override hardcoded linuxrc variables with /etc/default/distro,
    subsequently overwritten from the mounted
    ${FLL_MOUNTPOINT}/etc/default/distro

 -- Niall Walsh <niallwalsh@users.berlios.de>  Mon, 19 Feb 2007 01:02:00 +0000

live-initrd-sidux (0.0.53) unstable; urgency=low

  * add uhci-hcd to initrd, thanks to x-un-i for noticing.
  * add usbhid to support USB keyboards within busybox.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 18 Feb 2007 15:07:52 +0100

live-initrd-sidux (0.0.52) unstable; urgency=low

  * Unconditionally load sr_mod (for sata/scsi/usb/firewire cd drives)
  * Load sd_mod for fromiso, fromhd, tohd, bootfrom and fstab
  * Cosmetic changes to CMDLINE cases and inital variable setting
  * Fix default FSTABFILE to use ${FLL_IMAGE_FILE}.FSTAB (no FLL_DISTRO_NAME_UC)

 -- Niall Walsh <niallwalsh@users.berlios.de>  Thu, 15 Feb 2007 16:48:27 +0000

live-initrd-sidux (0.0.51) unstable; urgency=low

  * revert to known working unionfs mount options, 2.6.20 isn't supported
    right now.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon,  5 Feb 2007 02:43:12 +0100

live-initrd-sidux (0.0.50) unstable; urgency=low

  * disable -o delete=whiteout for unionfs.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun,  4 Feb 2007 20:32:37 +0100

live-initrd-sidux (0.0.49) unstable; urgency=low

  * Fix fstab so default is $FLL_DISTRO_NAME_UC.FSTAB (e.g. SIDUX>FSTAB)
  * Don't mount /UNIONFS again in unionfs/aufs if fstab has already mounted it

 -- Niall Walsh <niallwalsh@users.berlios.de>  Thu,  1 Feb 2007 01:38:52 +0000

live-initrd-sidux (0.0.48) unstable; urgency=low

  * Add handling for modular filesystems in mount_it.

 -- Niall Walsh <niallwalsh@users.berlios.de>  Wed, 31 Jan 2007 20:25:06 +0000

live-initrd-sidux (0.0.47) unstable; urgency=low

  * try to fix booting from USB CD-ROM.
