@@ -8,7 +8,12 @@ live-initrd-sidux (0.0.54) UNRELEASED; urgency=low
     subsequently overwritten from the mounted
     ${FLL_MOUNTPOINT}/etc/default/distro
 
- -- Niall Walsh <niallwalsh@users.berlios.de>  Mon, 19 Feb 2007 01:02:00 +0000
+  [ Kel Modderman ]
+  * Update copyright info.
+  * Remove some commented code.
+  * Add a comment about mkinitramfs compat.
+
+ -- Kel Modderman <kel@otaku42.de>  Mon, 19 Feb 2007 11:16:33 +1000
 
 live-initrd-sidux (0.0.53) unstable; urgency=low
 
